# TTAD

./: .gitignore  LICENSE  README.md  index.rst  main.py  pyproject.toml
docs/: conf.py  index.rst  requirements.txt
home_projects/project_ML/: notebook.ipynb
home_projects/project_panda/: 25_26_taller_pandas.ipynb
home_projects/project_panda/data/: plates_properties.csv  sample_NYC_parking_issues.csv
notebooks/02_Proyectos/: 01_Introduction.ipynb  02_Proyectos.ipynb  03_Notebooks_y_scripts.ipynb  04_Paths.ipynb  05_Terminal.ipynb
notebooks/03_Numpy/: 01_Introduction.ipynb
notebooks/04_Pandas/: 01_Introduction.ipynb
notebooks/05_MachineLearning/: 01_Introduction.ipynb  02_PredictiveModelling.ipynb  03_Activity_LinearRegression.ipynb  04_Regression.ipynb  04b_Ejercicio2.ipynb
notebooks/05_Pandas/: 01_Introduction.ipynb  02_Scripts_Notebooks.ipynb  03_GroupingData.ipynb  04_OtherActions.ipynb  05_Visualization.ipynb
notebooks/06_ETLprocess/: 02_Automatization.ipynb
notebooks/06_MachineLearning/: 06_Clustering.ipynb
notebooks/07_MachineLearning/: 00_EDA.ipynb  01_Introduction.ipynb  02_PredictiveModelling.ipynb  03_Activity_LinearRegression.ipynb  04_Regression.ipynb  04b_Ejercicio1.ipynb  04b_Ejercicio2.ipynb  05_Classification.ipynb  06_Clustering.ipynb  main.py  pyproject.toml
notebooks/07_MachineLearning/data/: california_housing_with_beach_distance.csv
projects/etl_project_01/: .dockerignore  Dockerfile.simulator  Dockerfile.student  README.md  docker-compose.yml  price_simulator.py  status_server.py
projects/etl_project_01/data/: prices.csv
(+1 files in other folders)
