[project]
name = "ttad-master"
version = "0.1.0"
description = "TTAD Subject Material"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.3",
    "numpy>=2.2.3",
    "matplotlib>=3.8.3",
    "seaborn>=0.13.3",
    "scikit-learn>=1.3.3",
    "scipy>=1.13.3",
    "statsmodels>=0.14.3",
    "xgboost>=2.2.3",
]
